--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
+    <form id="form">
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" id="nombre">
+        <input type="submit" value="Enviar" id="submit">
+    </form>
+    
+    <section class="respuesta hide">
+        
+    </section>
+
     <script type="module" src="./src/main.js"></script>
 </body>
 </html>
